fixed flexbox issue with gap not working in chrome so I had to add margin and refactor the code with calc and width percentages :'(

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -135,7 +135,11 @@ img {
     display: flex;
     justify-content: space-between;
     padding: 100px 0px;
-    column-gap: 5%;
+
+    img{
+        width: calc(100% /3 - 20px);
+        margin: 5px;
+    }
 }
 
 /*INFORMATION*/
